# contextweaver-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  REVIEW_1.5.3-rc.0.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  server.json  vitest.config.ts
.github/workflows/: ci.yml  prerelease.yml  release.yml
crates/chunker/: Cargo.toml  package.json
crates/chunker/src/: calls.rs  encoding.rs  imports.rs  language_spec.rs  lib.rs  parser_pool.rs  source_adapter.rs  splitter.rs  symbols.rs
docs/: CRITICAL_FIXES_PLAN.md  config-command.md
src/: defaultEnv.ts  index.ts
src/chunking/: LanguageSpec.ts  ParserPool.ts  SemanticSplitter.ts  SourceAdapter.ts  nativeChunker.ts
src/cli/: configCommand.ts  mirrorCommands.ts  updateCommand.ts
src/db/: bootstrap.ts  index.ts
src/indexer/: index.ts
src/mcp/: server.ts
src/scanner/: index.ts  processor.ts  watcher.ts
src/search/: ChunkContentLoader.ts  ContextPacker.ts  GraphExpander.ts  QueryCache.ts  QueryPlanner.ts  SearchService.ts  config.ts  fts.ts  loadConfig.ts  types.ts  utils.ts
src/semantic/: callGraphBuilder.ts  ctags.ts  lsp.ts  treeSitterCalls.ts  treeSitterTags.ts  types.ts
src/stats/: index.ts
src/utils/: encoding.ts
src/vectorStore/: index.ts
tests/chunking/: SemanticSplitter.diff.test.ts  SourceAdapter.diff.test.ts  SourceAdapter.test.ts  newLanguages.test.ts
tests/cli/: mirrorCommands.test.ts  updateCommand.test.ts
tests/db/: index-version.test.ts  lancedb-migration-state.test.ts  migration-lock.test.ts  migration.test.ts  pending-marks.test.ts  semantic-graph.test.ts  (+1 more)
(+53 files in other folders)
